[tool.poetry]
name = "youtube video to blog posts"
version = "0.0.1"
description = "YouTube Video To Blog Posts"
authors = ["Muhammad Awais"]
license = "YTB"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
